代码高亮 修改代码字体

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/11.1.0/styles/xcode.min.css" rel="stylesheet">
+    <link href="https://fonts.font.im/css?family=Ubuntu+Mono" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JiaoTong</title>
   </head>
